beta-first-homework
Second version of 1st homework

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,96 +7,94 @@
     <title>Studio</title>
   </head>
   <body>
+    <!-- Шапка сайту -->
     <header>
-      <a href="https://www.webstudio.com.ua/logo/">
-        <img
-          src="https://www.webstudio.com.ua/logo/web-studio-logo.jpeg"
-          alt="Логотип компанії Web Studio"
-          width="145"
-        />
-      </a>
       <nav>
+        <a href="https://www.webstudio.com.ua/logo/">
+          <img
+            src="https://www.webstudio.com.ua/logo/web-studio-logo.jpeg"
+            alt="Логотип компанії Web Studio"
+            width="145"
+          />
+        </a>
         <ul>
           <li><a href="/Студія">Студія</a></li>
           <li><a href="/Портфоліо">Портфоліо</a></li>
           <li><a href="/Контакти">Контакти</a></li>
         </ul>
+        <ul>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </nav>
-      <ul>
-        <li><a href="info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-      </ul>
     </header>
+    <!-- Основний розділ -->
     <main>
-      <article>
+      <!-- Герой -->
+      <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
-      </article>
-      <ul>
-        <section>
-          <li><h4>УВАГА ДО ДЕТАЛЕЙ</h4></li>
+      </section>
+      <!-- Особливості -->
+      <section>
+        <ul>
+          <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3></li>
           <li>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-        </section>
-        <section>
-          <li><h4>ПУНКТУАЛЬНІСТЬ</h4></li>
+          <li><h3>ПУНКТУАЛЬНІСТЬ</h3></li>
           <li>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-        </section>
-        <section>
-          <li><h4>ПЛАНУВАННЯ</h4></li>
+          <li><h3>ПЛАНУВАННЯ</h3></li>
           <li>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-        </section>
-        <section>
-          <li><h4>СУЧАСНІ ТЕХНОЛОГІЇ</h4></li>
+          <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3></li>
           <li>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
-        </section>
-      </ul>
-      <article>
-        <h2>Чим ми займаємося</h2>
-      </article>
+        </ul>
+      </section>
+      <!-- Чим ми займаемося -->
       <section>
+        <h2>Чим ми займаємося</h2>
         <ul>
           <li>
             <img
               src="/images/box-1.jpg"
-              alt="Процес розробки веб-сторінки"
+              alt="Програміст за процесом розробки на робочому місці"
               width="370"
             />
           </li>
           <li>
             <img
               src="/images/box-2.jpg"
-              alt="Процес оптимізаціх веб-сторінки під різні платформи"
+              alt="Веб дизайнери працюють над інтерфейсом програми для смартфонів"
               width="370"
             />
           </li>
           <li>
             <img
               src="/images/box-3.jpg"
-              alt="Процес розробки дизайну веб-сторінки"
+              alt="Веб-дизайнер в процесі вибору кольору за допомогою графічного планшету"
               width="370"
             />
           </li>
         </ul>
       </section>
+      <!-- Команда -->
       <section>
         <ul>
           <li><h2>Наша команда</h2></li>
@@ -108,7 +106,7 @@
                 width="270"
               />
               <figcaption>
-                <h5>Ігор Дем'яненко</h5>
+                <h3>Ігор Дем'яненко</h3>
                 <p>Product Designer</p>
               </figcaption>
             </figure>
@@ -121,7 +119,7 @@
                 width="270"
               />
               <figcaption>
-                <h5>Ольга Рєпіна</h5>
+                <h3>Ольга Рєпіна</h3>
                 <p>Frontend Developer</p>
               </figcaption>
             </figure>
@@ -134,7 +132,7 @@
                 width="270"
               />
               <figcaption>
-                <h5>Микола Тарасов</h5>
+                <h3>Микола Тарасов</h3>
                 <p>Marketing</p>
               </figcaption>
             </figure>
@@ -147,7 +145,7 @@
                 width="270"
               />
               <figcaption>
-                <h5>Михайло Єрмаков</h5>
+                <h3>Михайло Єрмаков</h3>
                 <p>UI Designer</p>
               </figcaption>
             </figure>
@@ -155,6 +153,7 @@
         </ul>
       </section>
     </main>
+    <!-- Футер -->
     <footer>
       <a href="https://www.webstudio.com.ua/logo/">
         <img
@@ -163,19 +162,19 @@
           width="145"
         />
       </a>
-      <ul>
-        <address>
-          <li><p>м. Київ, пр-т Лесі Українки, 26</p></li>
-        </address>
-        <address>
+      <address>
+        <p>м. Київ, пр-т Лесі Українки, 26</p>
+      </address>
+      <address>
+        <ul>
           <li>
             <p><a href="info@devstudio.com">info@devstudio.com</a></p>
           </li>
           <li>
             <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
           </li>
-        </address>
-      </ul>
+        </ul>
+      </address>
     </footer>
   </body>
 </html>
