--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
     <!-- Шапка сайту -->
     <header>
       <nav>
-        <a href="https://www.webstudio.com.ua/logo/">
-          <img
-            src="https://www.webstudio.com.ua/logo/web-studio-logo.jpeg"
-            alt="Логотип компанії Web Studio"
-            width="145"
-          />
-        </a>
+        <a href="https://www.webstudio.com.ua">Web Studio</a>
         <ul>
           <li><a href="/Студія">Студія</a></li>
           <li><a href="/Портфоліо">Портфоліо</a></li>
@@ -155,13 +149,7 @@
     </main>
     <!-- Футер -->
     <footer>
-      <a href="https://www.webstudio.com.ua/logo/">
-        <img
-          src="https://www.webstudio.com.ua/logo/web-studio-logo.jpeg"
-          alt="Логотип компанії Web Studio"
-          width="145"
-        />
-      </a>
+      <a href="https://www.webstudio.com.ua">Web Studio</a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
       </address>
