--- a/index.html
+++ b/index.html
@@ -31,29 +31,30 @@
       </section>
       <!-- Особливості -->
       <section>
+        <h2>Особливості нашої компанії</h2>
         <ul>
-          <li><h3>УВАГА ДО ДЕТАЛЕЙ</h3></li>
           <li>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
-          <li><h3>ПУНКТУАЛЬНІСТЬ</h3></li>
           <li>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
-          <li><h3>ПЛАНУВАННЯ</h3></li>
           <li>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
-          <li><h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3></li>
           <li>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -90,59 +91,43 @@
       </section>
       <!-- Команда -->
       <section>
+        <h2>Наша команда</h2>
         <ul>
-          <li><h2>Наша команда</h2></li>
           <li>
-            <figure>
-              <img
-                src="/images/img-team-1.jpg"
-                alt="Ігор Дем'яненко Product Designer"
-                width="270"
-              />
-              <figcaption>
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="/images/img-team-1.jpg"
+              alt="Ігор Дем'яненко Product Designer"
+              width="270"
+            />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="/images/img-team-2.jpg"
-                alt="Ольга Рєпіна Frontend Developer"
-                width="270"
-              />
-              <figcaption>
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="/images/img-team-2.jpg"
+              alt="Ольга Рєпіна Frontend Developer"
+              width="270"
+            />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="/images/img-team-3.jpg"
-                alt="Микола Тарасов Marketing"
-                width="270"
-              />
-              <figcaption>
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
-              </figcaption>
-            </figure>
+            <img
+              src="/images/img-team-3.jpg"
+              alt="Микола Тарасов Marketing"
+              width="270"
+            />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
-            <figure>
-              <img
-                src="/images/img-team-4.jpg"
-                alt="Михайло Єрмаков UI Designer"
-                width="270"
-              />
-              <figcaption>
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
-              </figcaption>
-            </figure>
+            <img
+              src="/images/img-team-4.jpg"
+              alt="Михайло Єрмаков UI Designer"
+              width="270"
+            />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
@@ -151,15 +136,17 @@
     <footer>
       <a href="https://www.webstudio.com.ua">Web Studio</a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-      </address>
-      <address>
         <ul>
           <li>
-            <p><a href="info@devstudio.com">info@devstudio.com</a></p>
+            <a href="https://goo.gl/maps/XUwRcNz6kgD58abX9"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
           </li>
           <li>
-            <p><a href="tel:+380961111111">+38 096 111 11 11</a></p>
+            <a href="info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
