--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
         <ul>
           <li>
             <img
-              src="/images/box-1.jpg"
+              src="./images/box-1.jpg"
               alt="Програміст за процесом розробки на робочому місці"
               width="370"
             />
           </li>
           <li>
             <img
-              src="/images/box-2.jpg"
+              src="./images/box-2.jpg"
               alt="Веб дизайнери працюють над інтерфейсом програми для смартфонів"
               width="370"
             />
           </li>
           <li>
             <img
-              src="/images/box-3.jpg"
+              src="./images/box-3.jpg"
               alt="Веб-дизайнер в процесі вибору кольору за допомогою графічного планшету"
               width="370"
             />
@@ -95,7 +95,7 @@
         <ul>
           <li>
             <img
-              src="/images/img-team-1.jpg"
+              src="./images/img-team-1.jpg"
               alt="Ігор Дем'яненко Product Designer"
               width="270"
             />
@@ -104,7 +104,7 @@
           </li>
           <li>
             <img
-              src="/images/img-team-2.jpg"
+              src="./images/img-team-2.jpg"
               alt="Ольга Рєпіна Frontend Developer"
               width="270"
             />
@@ -113,7 +113,7 @@
           </li>
           <li>
             <img
-              src="/images/img-team-3.jpg"
+              src="./images/img-team-3.jpg"
               alt="Микола Тарасов Marketing"
               width="270"
             />
@@ -122,7 +122,7 @@
           </li>
           <li>
             <img
-              src="/images/img-team-4.jpg"
+              src="./images/img-team-4.jpg"
               alt="Михайло Єрмаков UI Designer"
               width="270"
             />
