--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
       <address>
         <ul>
           <li>
-            <a href="https://goo.gl/maps/XUwRcNz6kgD58abX9" target="_blank" rel="noreferrer noopener"
+            <a
+              href="https://goo.gl/maps/XUwRcNz6kgD58abX9"
+              target="_blank"
+              rel="noreferrer noopener"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
